--- a/eng/pipelines/ci.yml
+++ b/eng/pipelines/ci.yml
@@ -84,22 +84,22 @@ jobs:
       - template: ./templates/install.yml
         parameters:
           nodeVersion: "20.x"
-      - template: ./templates/build.yml
-
-      - script: node ./core/packages/internal-build-utils/cmd/cli.js bump-version-preview .
-        displayName: Bump version to prerelease targets
-
       - pwsh: pnpm --filter='./packages/*' run lint
         displayName: Dry run 1
 
       - pwsh: pnpm --filter='!./core/*' run lint
         displayName: Dry run 4
 
+      - template: ./templates/build.yml
+
+      - script: node ./core/packages/internal-build-utils/cmd/cli.js bump-version-preview .
+        displayName: Bump version to prerelease targets
+
       - pwsh: |
           echo "Updating config"
           pnpm config set '//registry.npmjs.org/:_authToken' '${NPM_AUTH_TOKEN}'
           echo "Publishing"
-          pnpm -r --filter='./packages/*' publish --access public --no-git-checks
+          pnpm -r --filter='./packages/*' publish --access public --no-git-checks --tag next
         name: Publish
         env:
           NPM_AUTH_TOKEN: $(azure-sdk-npm-token)
