--- a/eng/pipelines/ci.yml
+++ b/eng/pipelines/ci.yml
@@ -67,9 +67,9 @@ jobs:
 
   - job: npm_preview
     timeoutInMinutes: 90
-    # dependsOn: npm_stable
+    dependsOn: npm_stable
     displayName: Npm publish dev version
-    # condition: eq(variables['Build.SourceBranch'], 'refs/heads/main') # Only publish -dev on main branch.
+    condition: eq(variables['Build.SourceBranch'], 'refs/heads/main') # Only publish -dev on main branch.
     pool:
       name: azsdk-pool-mms-win-2022-general
       vmImage: windows-2022
