--- a/eng/feeds/arm/tspconfig_stand_alone.yaml
+++ b/eng/feeds/arm/tspconfig_stand_alone.yaml
@@ -2,9 +2,12 @@ emit:
   - '@azure-tools/typespec-autorest'
 options:
   '@azure-tools/typespec-autorest':
+    use-read-only-status-schema: true
     ## emitter-output-dir: "{project-root}/.."
     use-read-only-status-schema: true
     azure-resource-provider-folder: "resource-manager"
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/openapi.json"
     examples-directory: "{project-root}/examples"
-
+linter:
+  extends:
+    - "@azure-tools/typespec-azure-resource-manager/all"
