--- a/.chronus.yaml
+++ b/.chronus.yaml
@@ -8,3 +8,5 @@ versionPolicies:
       - "@azure-tools/typespec-azure-core"
       - "@azure-tools/typespec-azure-resource-manager"
       - "@azure-tools/typespec-client-generator-core"
+ignore:
+  - "@typespec/*"
