--- a/package.json
+++ b/package.json
@@ -4,28 +4,29 @@
   "private": true,
   "packageManager": "pnpm@8.13.1",
   "scripts": {
-    "build": "pnpm -r --filter='!./core' --workspace-concurrency=Infinity --aggregate-output --reporter=append-only build ",
+    "run-all": "pnpm -r --filter='!./core'",
+    "build": "pnpm run-all --workspace-concurrency=Infinity --aggregate-output --reporter=append-only build ",
     "check-format": "pnpm run prettier --check",
     "check-version-mismatch": "syncpack list-mismatches",
     "change": "chronus",
-    "clean": "pnpm -r --filter='!./core' run clean",
+    "clean": "pnpm run-all run clean",
     "cspell": "cspell --no-progress \"**/*.{md,ts,tsx}\" ",
-    "dogfood": "pnpm install && pnpm build && pnpm -r --filter='!./core' dogfood",
+    "dogfood": "pnpm install && pnpm build && pnpm run-all dogfood",
     "fix-version-mismatch": "syncpack fix-mismatches",
     "format": "pnpm run prettier --write",
-    "lint": "pnpm -r --filter='!./core'  --parallel --aggregate-output --reporter=append-only run lint",
+    "lint": "pnpm run-all  --parallel --aggregate-output --reporter=append-only run lint",
     "merge-coverage": "c8 -- report --reporter=cobertura --reporter=text",
     "pack:all": "node ./eng/scripts/pack-all.js",
     "preinstall": "npx only-allow pnpm",
     "prepare-publish": "pnpm chronus version",
     "prettier": "prettier . --config .prettierrc.json",
     "purge": "rimraf --glob \"packages/*/node_modules/\" --glob \"core/packages/*/node_modules/\"",
-    "regen-docs": "pnpm -r --filter='!./core'  --parallel --aggregate-output --reporter=append-only run regen-docs",
-    "regen-samples": "pnpm -r --filter='!./core' run regen-samples",
-    "test-official": "pnpm -r --filter='!./core' --aggregate-output --reporter=append-only test-official",
-    "test:e2e": "pnpm -r --filter='!./core' run e2e",
-    "test": "pnpm -r --filter='!./core' --aggregate-output --reporter=append-only run test",
-    "update-latest-docs": "pnpm -r --filter='!./core' run update-latest-docs",
+    "regen-docs": "pnpm run-all  --parallel --aggregate-output --reporter=append-only run regen-docs",
+    "regen-samples": "pnpm run-all run regen-samples",
+    "test-official": "pnpm run-all --aggregate-output --reporter=append-only test-official",
+    "test:e2e": "pnpm run-all run e2e",
+    "test": "pnpm run-all --aggregate-output --reporter=append-only run test",
+    "update-latest-docs": "pnpm run-all run update-latest-docs",
     "watch": "tsc --build ./tsconfig.ws.json --watch"
   },
   "devDependencies": {
