--- a/.chronus.yaml
+++ b/.chronus.yaml
@@ -6,6 +6,7 @@ versionPolicies:
     packages:
       - "@azure-tools/typespec-autorest"
       - "@azure-tools/typespec-azure-core"
+      - "@azure-tools/typespec-azure-portal-core"
       - "@azure-tools/typespec-azure-resource-manager"
       - "@azure-tools/typespec-client-generator-core"
 ignore:
