--- a/packages/typespec-azure-portal-core/package.json
+++ b/packages/typespec-azure-portal-core/package.json
@@ -19,27 +19,27 @@
   "main": "dist/src/index.js",
   "tspMain": "lib/main.tsp",
   "peerDependencies": {
-    "@typespec/compiler": "~0.52.0",
-    "@azure-tools/typespec-azure-resource-manager": "workspace:~0.38.0"
-
+    "@azure-tools/typespec-azure-resource-manager": "workspace:~0.38.0",
+    "@typespec/compiler": "~0.52.0"
   },
   "devDependencies": {
-    "typescript": "~5.3.3",
+    "@azure-tools/typespec-autorest": "workspace:~0.38.1",
     "@azure-tools/typespec-azure-core": "workspace:~0.38.0",
     "@azure-tools/typespec-azure-resource-manager": "workspace:~0.38.0",
     "@azure-tools/typespec-client-generator-core": "workspace:~0.38.0",
-    "@azure-tools/typespec-autorest": "workspace:~0.38.1",
     "@types/node": "~18.11.9",
     "@typespec/compiler": "workspace:~0.52.0",
-    "@typespec/openapi": "workspace:~0.52.0",
     "@typespec/http": "workspace:~0.52.0",
+    "@typespec/openapi": "workspace:~0.52.0",
     "@typespec/rest": "workspace:~0.52.0",
+    "@typespec/tspd": "workspace:~0.46.0",
     "@typespec/versioning": "workspace:~0.52.0",
-    "source-map-support": "~0.5.21",
+    "@vitest/coverage-v8": "^1.1.0",
     "c8": "~8.0.1",
     "path": "^0.12.7",
-    "vitest": "^1.2.0",
-    "@vitest/coverage-v8": "^1.1.0"
+    "source-map-support": "~0.5.21",
+    "typescript": "~5.3.3",
+    "vitest": "^1.2.0"
   },
   "exports": {
     ".": {
