--- a/eng/pipelines/pr-tryit.yml
+++ b/eng/pipelines/pr-tryit.yml
@@ -57,6 +57,7 @@ jobs:
           GH_TOKEN: $(azuresdk-github-pat)
   - job: change_comment
     displayName: Describe changes on PR
+    condition: and(succeeded(), eq(startsWith(variables['System.PullRequest.SourceBranch'], 'publish/'), false))
     pool:
       name: azsdk-pool-mms-ubuntu-2004-general
       vmImage: ubuntu-20.04
