--- a/packages/typespec-azure-portal-core/package.json
+++ b/packages/typespec-azure-portal-core/package.json
@@ -1,26 +1,35 @@
 {
   "name": "@azure-tools/typespec-azure-portal-core",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.39.0",
+  "author": "Microsoft Corporation",
+  "description": "TypeSpec Azure Portal Core library",
+  "license": "MIT",
+  "homepage": "https://azure.github.io/typespec-azure",
+  "readme": "https://github.com/Azure/typespec-azure/blob/main/packages/typespec-azure-portal-core/README.md",
   "scripts": {
-    "build": "tsc -p .",
+    "clean": "rimraf ./dist ./temp",
+    "build": "tsc -p . && npm run lint-typespec-library",
+    "watch": "tsc -p . --watch",
+    "lint-typespec-library": "tsp compile . --warn-as-error --import @typespec/library-linter --no-emit",
     "test": "vitest run",
     "test:watch": "vitest -w",
-    "test-official": "vitest run --coverage --reporter=junit --reporter=default --no-file-parallelism"
+    "test:ui": "vitest --ui",
+    "test-official": "vitest run --coverage --reporter=junit --reporter=default --no-file-parallelism",
+    "lint": "eslint . --ext .ts --max-warnings=0",
+    "lint:fix": "eslint . --fix --ext .ts",
+    "regen-docs": "tspd doc .  --enable-experimental  --output-dir ../../docs/libraries/typespec-azure-portal-core/reference"
   },
   "keywords": [
     "Azure",
     "Portal",
     "TypeSpec"
   ],
-  "author": "",
-  "license": "MIT",
   "type": "module",
   "main": "dist/src/index.js",
   "tspMain": "lib/main.tsp",
   "peerDependencies": {
     "@azure-tools/typespec-azure-resource-manager": "workspace:~0.38.0",
-    "@typespec/compiler": "~0.52.0"
+    "@typespec/compiler": "workspace:~0.52.0"
   },
   "devDependencies": {
     "@azure-tools/typespec-autorest": "workspace:~0.38.1",
@@ -30,11 +39,13 @@
     "@types/node": "~18.11.9",
     "@typespec/compiler": "workspace:~0.52.0",
     "@typespec/http": "workspace:~0.52.0",
+    "@typespec/library-linter": "workspace:~0.52.0",
     "@typespec/openapi": "workspace:~0.52.0",
     "@typespec/rest": "workspace:~0.52.0",
     "@typespec/tspd": "workspace:~0.46.0",
     "@typespec/versioning": "workspace:~0.52.0",
     "@vitest/coverage-v8": "^1.1.0",
+    "@vitest/ui": "^1.1.3",
     "c8": "~8.0.1",
     "source-map-support": "~0.5.21",
     "typescript": "~5.3.3",
