--- a/packages/typespec-azure-playground-website/package.json
+++ b/packages/typespec-azure-playground-website/package.json
@@ -48,16 +48,16 @@
     "!dist/test/**"
   ],
   "dependencies": {
-    "@typespec/versioning": "workspace:~0.52.0",
-    "@typespec/compiler": "workspace:~0.52.0",
-    "@typespec/rest": "workspace:~0.52.0",
-    "@typespec/http": "workspace:~0.52.0",
-    "@typespec/openapi": "workspace:~0.52.0",
-    "@typespec/openapi3": "workspace:~0.52.0",
-    "@azure-tools/typespec-autorest": "workspace:~0.38.1",
-    "@azure-tools/typespec-azure-core": "workspace:~0.38.0",
-    "@azure-tools/typespec-azure-resource-manager": "workspace:~0.38.0",
-    "@azure-tools/typespec-client-generator-core": "workspace:~0.38.0",
+    "@typespec/versioning": "workspace:~0.53.0",
+    "@typespec/compiler": "workspace:~0.53.0",
+    "@typespec/rest": "workspace:~0.53.0",
+    "@typespec/http": "workspace:~0.53.0",
+    "@typespec/openapi": "workspace:~0.53.0",
+    "@typespec/openapi3": "workspace:~0.53.0",
+    "@azure-tools/typespec-autorest": "workspace:~0.39.0",
+    "@azure-tools/typespec-azure-core": "workspace:~0.39.0",
+    "@azure-tools/typespec-azure-resource-manager": "workspace:~0.39.0",
+    "@azure-tools/typespec-client-generator-core": "workspace:~0.39.0",
     "@vitejs/plugin-react": "~4.2.1",
     "@emotion/react": "^11.11.1",
     "es-module-shims": "~1.8.0",
@@ -69,9 +69,9 @@
   "devDependencies": {
     "@types/node": "~18.11.9",
     "@types/react-dom": "~18.2.7",
-    "@typespec/eslint-config-typespec": "workspace:~0.52.0",
-    "@typespec/bundler": "workspace:~0.1.0-alpha.5",
-    "@typespec/playground": "workspace:~0.1.0-alpha.5",
+    "@typespec/eslint-config-typespec": "workspace:~0.53.0",
+    "@typespec/bundler": "workspace:~0.1.0",
+    "@typespec/playground": "workspace:~0.1.0",
     "@playwright/test": "^1.39.0",
     "eslint": "^8.55.0",
     "rimraf": "~5.0.1",
