--- a/packages/typespec-azure-portal-core/package.json
+++ b/packages/typespec-azure-portal-core/package.json
@@ -47,6 +47,7 @@
     "@vitest/coverage-v8": "^1.1.0",
     "@vitest/ui": "^1.1.3",
     "c8": "~8.0.1",
+    "eslint": "^8.55.0",
     "source-map-support": "~0.5.21",
     "typescript": "~5.3.3",
     "vitest": "^1.2.0"
