--- a/packages/typespec-azure-portal-core/package.json
+++ b/packages/typespec-azure-portal-core/package.json
@@ -38,6 +38,8 @@
     "@azure-tools/typespec-client-generator-core": "workspace:~0.39.0",
     "@types/node": "~18.11.9",
     "@typespec/compiler": "workspace:~0.53.0",
+    "@typespec/eslint-config-typespec": "workspace:~0.53.0",
+    "@typespec/eslint-plugin": "workspace:~0.53.0",
     "@typespec/http": "workspace:~0.53.0",
     "@typespec/library-linter": "workspace:~0.53.0",
     "@typespec/openapi": "workspace:~0.53.0",
