--- a/packages/typespec-azure-resource-manager/package.json
+++ b/packages/typespec-azure-resource-manager/package.json
@@ -53,8 +53,8 @@
   ],
   "peerDependencies": {
     "@typespec/compiler": "workspace:~0.53.1",
-    "@azure-tools/typespec-azure-core": "~0.39.0",
-    "@azure-tools/typespec-autorest": "~0.39.1",
+    "@azure-tools/typespec-azure-core": "workspace:~0.39.0",
+    "@azure-tools/typespec-autorest": "workspace:~0.39.1",
     "@typespec/openapi": "workspace:~0.53.0",
     "@typespec/rest": "workspace:~0.53.0",
     "@typespec/http": "workspace:~0.53.0",
