--- a/packages/typespec-service-csharp/package.json
+++ b/packages/typespec-service-csharp/package.json
@@ -50,8 +50,8 @@
     "@typespec/rest": "workspace:~0.53.0",
     "@typespec/http": "workspace:~0.53.0",
     "@typespec/versioning": "workspace:~0.53.0",
-    "@azure-tools/typespec-autorest": "~0.39.1",
-    "@azure-tools/typespec-azure-core": "~0.39.0"
+    "@azure-tools/typespec-autorest": "workspace:~0.39.1",
+    "@azure-tools/typespec-azure-core": "workspace:~0.39.0"
   },
   "dependencies": {
     "change-case": "~5.3.0"
