--- a/packages/typespec-azure-resource-manager/package.json
+++ b/packages/typespec-azure-resource-manager/package.json
@@ -46,11 +46,13 @@
     "test:ci": "vitest run --coverage  --reporter=junit --reporter=default",
     "lint": "eslint .  --max-warnings=0",
     "lint:fix": "eslint . --fix ",
+    "regen-common-types": "tsx ./lib/common-types-generator/update-common-types.ts",
     "regen-docs": "tspd doc .  --enable-experimental  --output-dir ../../website/src/content/docs/docs/libraries/azure-resource-manager/reference"
   },
   "files": [
     "lib/**/*.tsp",
     "lib/common-types/openapi/**/*.json",
+    "lib/common-types-generator/**",
     "dist/**",
     "!dist/test/**"
   ],
@@ -60,6 +62,7 @@
   },
   "peerDependencies": {
     "@azure-tools/typespec-azure-core": "workspace:^",
+    "@azure-tools/typespec-autorest": "workspace:^",
     "@typespec/compiler": "workspace:^",
     "@typespec/http": "workspace:^",
     "@typespec/openapi": "workspace:^",
@@ -68,6 +71,7 @@
   },
   "devDependencies": {
     "@azure-tools/typespec-azure-core": "workspace:^",
+    "@azure-tools/typespec-autorest": "workspace:^",
     "@types/node": "~22.13.11",
     "@types/pluralize": "^0.0.33",
     "@typespec/compiler": "workspace:^",
