--- a/eng/feeds/__snapshots__/azure-core/tspconfig.yaml
+++ b/eng/feeds/__snapshots__/azure-core/tspconfig.yaml
@@ -12,7 +12,7 @@ options:
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/openapi.json"
   "@azure-tools/typespec-python":    
     package-dir: "azure-contoso"
-    package-name: "{package-dir}"  
+    namespace: "azure.contoso"
     package-mode: dataplane
   "@azure-tools/typespec-csharp":
     package-dir: "Azure.Contoso"
