--- a/eng/feeds/arm/tspconfig.yaml
+++ b/eng/feeds/arm/tspconfig.yaml
@@ -13,7 +13,7 @@ options:
     namespace: "{package-dir}"
   "@azure-tools/typespec-python":
     package-dir: "azure-mgmt-{{#toLowerCase}}{{parameters.ServiceNamespace}}{{/toLowerCase}}"
-    package-name: "{package-dir}"
+    namespace: "azure.mgmt.{{#toLowerCase}}{{parameters.ServiceNamespace}}{{/toLowerCase}}"
     generate-test: true
     generate-sample: true
   "@azure-tools/typespec-java":
