--- a/eng/feeds/data-plane/tspconfig_stand_alone.yaml
+++ b/eng/feeds/data-plane/tspconfig_stand_alone.yaml
@@ -11,7 +11,7 @@ options:
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/openapi.json"
   "@azure-tools/typespec-python":    
     package-dir: "{{#normalizePackageName}}{{parameters.ServiceNamespace}}{{/normalizePackageName}}"
-    package-name: "{package-dir}"  
+    namespace: azure.{{#toLowerCase}}{{parameters.ServiceNamespace}}{{/toLowerCase}} 
     package-mode: dataplane
   "@azure-tools/typespec-csharp":
     package-dir: "{{parameters.ServiceNamespace}}"
