--- a/package.json
+++ b/package.json
@@ -73,6 +73,10 @@
     ]
   },
   "dependencies": {
+    "@azure-tools/typespec-autorest": "^0.55.0",
+    "@azure-tools/typespec-azure-core": "^0.55.0",
+    "@typespec/openapi3": "^1.0.0-rc.1",
+    "@typespec/rest": "^0.69.0",
     "picocolors": "~1.1.1"
   },
   "pnpm": {
