--- a/packages/typespec-azure-resource-manager/package.json
+++ b/packages/typespec-azure-resource-manager/package.json
@@ -28,7 +28,8 @@
     "./testing": {
       "types": "./dist/src/testing/index.d.ts",
       "default": "./dist/src/testing/index.js"
-    }
+    },
+    "./common-types/*": "./lib/common-types/*"
   },
   "type": "module",
   "engines": {
