--- a/eng/pipelines/ci.yml
+++ b/eng/pipelines/ci.yml
@@ -25,6 +25,8 @@ extends:
                   nodeVersion: "20.x"
                 "Node 22.x":
                   nodeVersion: "22.x"
+                "Node 24.x":
+                  nodeVersion: "24.x"
 
             pool:
               name: $(LINUXPOOL)
