--- a/packages/typespec-azure-resource-manager/package.json
+++ b/packages/typespec-azure-resource-manager/package.json
@@ -31,6 +31,7 @@
     },
     "./common-types/*": {
       "typespec": "./lib/common-types/*",
+      "types": "./dist/src/index.d.ts",
       "default": "./dist/src/index.js"
     }
   },
