--- a/packages/typespec-azure-resource-manager/package.json
+++ b/packages/typespec-azure-resource-manager/package.json
@@ -31,8 +31,7 @@
     },
     "./common-types/*": {
       "typespec": "./lib/common-types/*",
-      "types": "./dist/src/index.d.ts",
-      "default": "./dist/src/index.js"
+      "default": "./"
     }
   },
   "type": "module",
