--- a/packages/typespec-azure-resource-manager/package.json
+++ b/packages/typespec-azure-resource-manager/package.json
@@ -31,6 +31,7 @@
     },
     "./common-types/*": {
       "typespec": "./lib/common-types/*",
+      "entrypoint": "./lib/common-types/common-types.tsp",
       "default": "./"
     }
   },
